Refactored JVM blocks to be real objects